# constellation-quant

./: .gitignore  LICENSE  Makefile  NEXT_STEPS.md  PROJECT_REPORT.md  README.md  pytest.ini  requirements.txt  setup.py
analysis/: parse_phase1.py  parse_phase2.py  phase1_epochs.csv  phase1_summary.csv  phase2_epochs.csv  phase2_summary.csv  test_ic_results.csv
assets/: generate_logo.py  generate_variant_diagrams.py
configs/: ablation_config.yaml  data_config.yaml  feature_config.yaml  model_config.yaml  paths.yaml  sweep_config.yaml  training_config.yaml
constellation_quant/: __init__.py
data_pipeline/: README.md  pyproject.toml
data_pipeline/data_pipeline/: __init__.py
data_pipeline/data_pipeline/edgar/: __init__.py  client.py  parser.py  storage.py
data_pipeline/data_pipeline/form4/: TODO.md  __init__.py
data_pipeline/data_pipeline/fred/: TODO.md  __init__.py
data_pipeline/data_pipeline/integration/: __init__.py  prepare_features.py
data_pipeline/data_pipeline/news/: TODO.md  __init__.py
data_pipeline/data_pipeline/nlp/: __init__.py  drift.py  embeddings.py  sentiment.py
data_pipeline/data_pipeline/scripts/: compute_nlp_features.py  download_filings.py  download_models.py  parse_filings.py  prepare_features.py
data_pipeline/data_pipeline/transcripts/: TODO.md  __init__.py
data_pipeline/data_pipeline/wikidata/: TODO.md  __init__.py
data_pipeline/data_pipeline/wikipedia/: TODO.md  __init__.py
data_pipeline/docs/: RUNBOOK.md
data_pipeline/slurm/: _common.sh  compute_nlp.sh  download_filings.sh  download_models.sh  parse_filings.sh  prepare_features.sh
scripts/: evaluate.py  (+8 more)
(+93 files in other folders)
